--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
     volumes:
       - .:/var/www
     ports:
-      - 9000:9000
+      - 80:80
+##TODO запилить сюды nginx, а то не могу подключитсья к серверу Symfony через контейнер
