--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=637131bd5aa19ed76599cf786c27ecfe
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://root:root@127.0.0.1:5432/main?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://root:root@symfony_start-post:5432/main?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
