--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,11 @@
-#easy_admin:
-#    entities:
-#        # List the entity class name you want to manage
-#        - App\Entity\Product
-#        - App\Entity\Category
-#        - App\Entity\User
+easy_admin:
+
+  design:
+    menu:
+      - { route: 'homepage', label: 'Back to the website', icon: 'home' }
+      - { entity: 'Conference', label: 'Conferences', icon: 'map-marker' }
+      - { entity: 'Comment', label: 'Comments', icon: 'comments' }
+
+  entities:
+    - App\Entity\Conference
+    - App\Entity\Comment
