--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,40 @@
 version: "3"
 
 services:
-  php:
-    build: .
-    container_name: symfony_start-php
-    volumes:
-      - .:/var/www
-    ports:
-      - 9000:9000
-  nginx:
-    image: nginx:latest
-    container_name: symfony_start-nginx
-    volumes:
-      - .:/var/www
-      - ./docker/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/symfony_start.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php-fpm.ini:/etc/opt/remi/php74/php.ini
-    links:
-      - php:php
-    ports:
-      - 80:80
-      - 443:443
-  database:
-    container_name: symfony_start-post
-    image: postgres:13-alpine
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: main
-    volumes:
-        - ./postgresql/data:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
+    php:
+        build: .
+        container_name: symfony_start-php
+        volumes:
+            - .:/var/www
+        ports:
+            - 9000:9000
+    nginx:
+        image: nginx:latest
+        container_name: symfony_start-nginx
+        volumes:
+            - .:/var/www
+            - ./docker/nginx.conf:/etc/nginx/nginx.conf
+            - ./docker/symfony_start.conf:/etc/nginx/conf.d/default.conf
+            - ./docker/php-fpm.ini:/etc/opt/remi/php74/php.ini
+        links:
+            - php:php
+        ports:
+            - 80:80
+            - 443:443
+    database:
+        container_name: symfony_start-post
+        image: postgres:13-alpine
+        environment:
+            POSTGRES_USER: root
+            POSTGRES_PASSWORD: root
+            POSTGRES_DB: main
+        volumes:
+            - ./postgresql/data:/var/lib/postgresql/data
+        ports:
+            - 5432:5432
+    redis:
+        container_name: symfony_start-redis
+        image: redis:6-alpine
+        ports:
+            - 6379:6379
 
