--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - ./docker/nginx.conf:/etc/nginx/nginx.conf
             - ./docker/symfony_start.conf:/etc/nginx/conf.d/default.conf
             - ./docker/php-fpm.ini:/etc/opt/remi/php74/php.ini
+            - ./Makefile:/var/www/Makefile
         links:
             - php:php
         ports:
